fixed some sizing stuff, should be better on mobile now

--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -28,17 +28,16 @@ figcaption {
 }
 
 .title {
-    font-size: 120px;
+    font-size: 15vh;
     margin-bottom: 0px;
     align-items: center;
-
 }
 .aboutme {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    font-size: 16pt;
+    font-size: 10vh;
     width: 1080px;
     padding-left: 40px;
     padding-right: 40px;
@@ -134,7 +133,7 @@ figcaption {
     30%;
     background-color: #0471A6;
     margin-bottom: 10px;
-    padding: 50px;
+    padding: 2%;
     width: 75%;
 }
 
